namespace Run4YourLife.Player
{
    public static class RunnerAnimation {
        public static readonly string xSpeed = "xSpeed";
        public static readonly string ySpeed = "ySpeed";
        public static readonly string timeToIdle = "timeToIdle";
        public static readonly string jump = "jump";
        public static readonly string ground = "ground";
        public static readonly string root = "root";
        public static readonly string pushForce = "pushForce";
        public static readonly string push = "push";
        public static readonly string dash = "dash";
        public static readonly string dance = "dance";
    }
}